@@ -79,6 +79,9 @@ public class ConfigurationHandler {
 			ModIDs.INFINITE_BUCKET_ID = configItem(Strings.INFINITE_BUCKET_NAME);
 			ModIDs.ITEM_NEW_SKULL_ID = configItem(Strings.ITEM_NEW_SKULL_NAME);
 			ModIDs.INFUSED_GEM_ID = configItem(Strings.INFUSED_GEM_NAME);
+			ModIDs.ENDIUM_PICKAXE_ID = configItem(Strings.ENDIUM_PICKAXE_NAME);
+			ModIDs.ENDIUM_AXE_ID = configItem(Strings.ENDIUM_AXE_NAME);
+			ModIDs.ENDIUM_SHOVEL_ID = configItem(Strings.ENDIUM_SHOVEL_NAME);
 
 			// Others
 			GanysEnd.togglerShouldMakeSound = configuration.get("Others", Strings.TOGGLERS_SHOULD_MAKE_SOUND, true).getBoolean(true);
