@@ -3,15 +3,19 @@ package ganymedes01.ganysend.items;
 import ganymedes01.ganysend.GanysEnd;
 import ganymedes01.ganysend.core.utils.Utils;
 import ganymedes01.ganysend.lib.ModIDs;
+import ganymedes01.ganysend.lib.ModMaterials;
 import ganymedes01.ganysend.lib.Strings;
 
 import java.util.List;
 
 import net.minecraft.entity.player.EntityPlayer;
-import net.minecraft.item.Item;
+import net.minecraft.inventory.IInventory;
+import net.minecraft.item.EnumRarity;
+import net.minecraft.item.ItemSpade;
 import net.minecraft.item.ItemStack;
 import net.minecraft.nbt.NBTTagCompound;
 import net.minecraft.nbt.NBTTagList;
+import net.minecraft.tileentity.TileEntity;
 import net.minecraft.util.StatCollector;
 import net.minecraft.world.World;
 import cpw.mods.fml.relauncher.Side;
@@ -24,20 +28,13 @@ import cpw.mods.fml.relauncher.SideOnly;
  * 
  */
 
-public class EnderTag extends Item {
+public class EndiumShovel extends ItemSpade {
 
-	public EnderTag() {
-		super(ModIDs.ENDER_TAG_ID);
-		setMaxStackSize(1);
-		setTextureName("paper");
+	public EndiumShovel() {
+		super(ModIDs.ENDIUM_SHOVEL_ID, ModMaterials.ENDIUM_TOOLS);
 		setCreativeTab(GanysEnd.endTab);
-		setUnlocalizedName(Utils.getUnlocalizedName(Strings.ENDER_TAG_NAME));
-	}
-
-	@Override
-	@SideOnly(Side.CLIENT)
-	public int getColorFromItemStack(ItemStack stack, int meta) {
-		return Utils.getColour(26, 75, 75);
+		setTextureName(Utils.getItemTexture(Strings.ENDIUM_SHOVEL_NAME));
+		setUnlocalizedName(Utils.getUnlocalizedName(Strings.ENDIUM_SHOVEL_NAME));
 	}
 
 	@Override
@@ -49,17 +46,20 @@ public class EnderTag extends Item {
 
 	@Override
 	public boolean onItemUse(ItemStack stack, EntityPlayer player, World world, int x, int y, int z, int side, float hitX, float hitY, float hitZ) {
-		if (stack.getItem() == this) {
-			if (stack.stackTagCompound == null)
-				stack.setTagCompound(new NBTTagCompound());
-			int[] coords = { x, y, z };
-			int dimension = world.provider.dimensionId;
-			stack.stackTagCompound.setIntArray("Position", coords);
-			stack.stackTagCompound.setInteger("Dimension", dimension);
-			stack.stackTagCompound.setBoolean("Tagged", true);
-			stack.setTagInfo("ench", new NBTTagList());
-			return true;
-		}
+		TileEntity tile = world.getBlockTileEntity(x, y, z);
+		if (tile != null && tile instanceof IInventory)
+			if (stack.getItem() == this) {
+				if (stack.stackTagCompound == null)
+					stack.setTagCompound(new NBTTagCompound());
+				int[] coords = { x, y, z };
+				int dimension = world.provider.dimensionId;
+				stack.stackTagCompound.setIntArray("Position", coords);
+				stack.stackTagCompound.setInteger("Dimension", dimension);
+				stack.stackTagCompound.setBoolean("Tagged", true);
+				stack.setTagInfo("ench", new NBTTagList());
+				player.swingItem();
+				return false;
+			}
 		return false;
 	}
 
@@ -72,5 +72,11 @@ public class EnderTag extends Item {
 			Integer.toString(stack.stackTagCompound.getIntArray("Position")[2]));
 		else
 			list.add(StatCollector.translateToLocal("nottagged"));
+	}
+
+	@Override
+	@SideOnly(Side.CLIENT)
+	public EnumRarity getRarity(ItemStack stack) {
+		return EnumRarity.uncommon;
 	}
 }
