@@ -18,5 +18,6 @@ public class ModMaterials {
 	public static final EnumArmorMaterial ENDIUM_ARMOUR = EnumHelper.addArmorMaterial("ENDIUM", 10, new int[] { 2, 4, 2, 2 }, 0);
 
 	// Item
-	public final static EnumToolMaterial ENDIUM = EnumHelper.addToolMaterial("ENDIUM", 0, 10, 2F, EnderScythe.DAMAGE - 4F, 0);
+	public final static EnumToolMaterial ENDIUM_SCYTHE = EnumHelper.addToolMaterial("ENDIUM_SCYTHE", 0, 10, 2F, EnderScythe.DAMAGE - 4F, 0);
+	public final static EnumToolMaterial ENDIUM_TOOLS = EnumHelper.addToolMaterial("ENDIUM_TOOLS", 3, 131, 12.0F, 1.0F, 0);
 }
