@@ -27,6 +27,9 @@ item.ganysend.itemNewSkullzombieVillagerHead.name=Zombie Villager Head
 item.ganysend.itemNewSkullironGolemHead.name=Iron Golem Head
 item.ganysend.infusedGem_night.name=Night Infused Gem
 item.ganysend.infusedGem_day.name=Day Infused Gem
+item.ganysend.endiumPickaxe.name=Endium Pickaxe
+item.ganysend.endiumAxe.name=Endium Axe
+item.ganysend.endiumShovel.name=Endium Shovel
 
 nottagged=Not Tagged
 
