@@ -19,10 +19,11 @@ v1.3
 -Added: Entity Shifter
 
 v1.4
--Added:Inventory Binder
+-Added: Inventory Binder
 -Added: Infinite Water Source
 -Change: Condense Ender Pearls Brick and Block into one ID
 -Change: New recipes for Infused Gems
 -Change: New texture for filtering hoppers
 -Change: Most of the abilities granted by the endium armour won't show on the inventory screen anymore
 -Added: End Stone Brick walls and ender pearl brick walls
+-Added: Endium Tools
